# Swifterbike

./: Back_wheel_ps_control  README.md  Software
Hardware/: ReadMe.txt
Hardware/Solidworks_SwifterBike/: 60KG_Servo.stp  Battery_Module.SLDPRT  Battery_Module_Back.SLDPRT  Depth_Camera_Surface.SLDPRT  Lidar_Surface.SLDPRT  Servo_Surface.SLDPRT
Hardware/Solidworks_SwifterBike/Back_Wheel_Module/: 3D_Printing_Wheel.SLDPRT  Assem3.SLDASM  Back_Wheel_Motor.SLDPRT  Back_Wheel_Mover.SLDPRT  Back_Wheel_Stator.SLDPRT  Bearing_Gear.SLDPRT  Overall_Modue.SLDASM  Part1 - Copy.SLDPRT  Parts_for_Module_Supporter---copy (2).SLDPRT  Top_for_Jetson.SLDPRT
Hardware/Solidworks_SwifterBike/Bike_Crossbar/: 车身建模.SLDPRT
Hardware/Solidworks_SwifterBike/Bike_Gear/: path.SLDPRT  sprocket.SLDPRT  前齿轮.SLDPRT
Hardware/Solidworks_SwifterBike/Bike_Handlebar/: 0.SLDPRT  滚珠.SLDPRT  龙头.SLDPRT  龙头建模.SLDPRT
Hardware/Solidworks_SwifterBike/Bike_Handlebar/自行车建模-----龙头/: 把手2.SLDPRT  把手3.SLDPRT
Hardware/Solidworks_SwifterBike/Bike_Saddle/: Part3.SLDPRT  Part7.SLDPRT  座位固定板辅助.SLDPRT  座位固定板辅助2.SLDPRT  座位装配体.SLDASM  板凳SLDPRT.SLDPRT  板凳调位螺丝.SLDPRT
Hardware/Solidworks_SwifterBike/Momentum_Wheel_Module/: Module_Supporter.SLDPRT  Momentum_Wheel+Motor.SLDASM  Over_All_Assemble.SLDASM  T_Moter.SLDPRT
Software/: Back_Wheel_Control.ino  PID_Control_for_Self-balancing.ino  PID_Front_Motor  PID_Front_Motor.ino  joy_test_0423.py
Software/ws/: GUI_PID.py  PID.py
Software/ws/devel/: .catkin  .rosinstall  setup.sh
Software/ws/devel/lib/pkgconfig/: pid_gui.pc  std_msgs.pc  yesense_imu.pc
Software/ws/devel/lib/yesense_imu/: yesense_imu_node
Software/ws/devel/share/yesense_imu/cmake/: yesense_imu-msg-extras.cmake  yesense_imu-msg-paths.cmake  yesense_imuConfig.cmake
Software/ws/devel/share/yesense_imu/docs/: YesenseNodeConfig-usage.dox  (+2 more)
Software/ws/scripts/: PID.py  demo_get_gui.py  test.py
Software/ws/src/pid_gui/: CMakeLists.txt  demo_get_gui.py  package.xml
Software/ws/src/pid_gui/msg/: PID_Para.msg
Software/ws/src/yesense/msg/: YesenseImuMasterGnssData.msg
Software/yesense-ros-v1.3/: README.md
Software/yesense-ros-v1.3/src/yesense/: CMakeLists.txt  package.xml  yesense.md
Software/yesense-ros-v1.3/src/yesense/cfg/: Yesense.cfg
Software/yesense-ros-v1.3/src/yesense/msg/: YesenseImuInertialData.msg  YesenseImuNavData.msg  YesenseImuUtcTime.msg
Software/yesense-ros-v1.3/src/yesense/rviz/: yesense.rviz
Software/yesense-ros-v1.3/src/yesense/src/: analysis_data.cpp  yesense_driver.cpp  yesense_driver.h
Solidworks_SwifterBike/: 60KG_Serevo.SLDPRT  Battery.SLDPRT  Bearing_for_Momentum_Module.SLDPRT  Crossbar_Scatch.SLDPRT
Solidworks_SwifterBike/Back_Wheel_Module/: Module_Supporter.SLDPRT  Part1.SLDDRW  Part1.SLDPRT  Parts_for_Module_Supporter---copy.SLDPRT  Surface_for_Jetson.SLDPRT
Solidworks_SwifterBike/Bike_Crossbar/: 车身.SLDPRT
Solidworks_SwifterBike/Bike_Gear/: 后齿轮.SLDPRT  链条一.SLDPRT
Solidworks_SwifterBike/Bike_Handlebar/: Assem1.SLDASM  Assem2.SLDASM  龙头2.SLDPRT  龙头3.SLDPRT  龙头6.SLDPRT
Solidworks_SwifterBike/Bike_Handlebar/自行车建模-----龙头/: 把手.SLDASM  把手.SLDPRT
Solidworks_SwifterBike/Bike_Saddle/: Part4.SLDPRT  Part6.SLDPRT  座位固定板.SLDPRT  拔配合.SLDPRT  板凳.SLDASM  板凳调位part1.SLDPRT  板凳调位拔.SLDPRT  板凳调位螺丝头.SLDPRT
Solidworks_SwifterBike/Bike_Wheel/: Wheel.SLDPRT
Solidworks_SwifterBike/Momentum_Wheel_Module/: Module_Bracket--3d_printing.SLDPRT  Momentum_Wheel.SLDPRT  Momentum_Wheel_Mover.SLDPRT  Momentum_Wheel_Stator.SLDPRT
yesense-ros-v1.3/: .gitignore  run.sh
yesense-ros-v1.3/src/yesense/launch/: run_without_rviz.launch  yesense_rviz.launch
yesense-ros-v1.3/src/yesense/src/: analysis_data.h
(+119 files in other folders)
